src/test/ui/issues/issue-46186.rs
struct Struct {
    a: usize,
};
//~^ ERROR expected item, found `;`

fn main() {}
